css/custom.css
/*
 * Custom stylesheet for whoisryannystrom.com
 * Created by Ryan Nystrom
*/
body{
    font: 16px/21px "museo-sans", Helvetica, sans-serif;
    background: #f2f2f2;
    padding-top: 7px;
}
h1, h2, h3, h4, h5 {
    font-weight:bold;
    font-family: "museo-slab", Helvetica, sans-serif;
}
h1 {
    font-size:35px;
}
h2, h3, h4 {
    font-size: 21px;
}
#site-header nav {
    margin-top:1em;
    text-align: right;
    position: absolute;
    right:0;
}
#site-header nav ul li{
    display: inline;
    margin-left: 30px;
}
#site-header nav ul li a{
    text-decoration:none;
    font-style:normal;
    font-size:1.5em;
    color:#181818;
}
#site-header nav ul li a:hover{
    color:#444;
}
.content a{
    text-decoration:none;
    color: #3366ff;
    text-shadow:0 1px 1px #fff;
}
.content a:visited{
    color: #3366ff;
}
.content a:hover{
    color:black;
}
.content ul li{
    list-style:circle;
    margin-left:20px;
}
.content ol li{
    text-align:decimal;
    margin-left:20px;
}
article header h2{
    margin-bottom:0;
}
article header p{
    margin: -0.5em 0 1.5em 0;
}
hr{
    margin-bottom:10px;
    border-color:#8D8D8D;
}
footer{
    font-size: 0.8em;
}
blockquote, blockquote p {
    font-size:14px;
    line-height:16px;
}
code {
    display:block;
    word-wrap:break-word;
    background:#fff;
    border:1px solid #ccc;
    padding:5px 10px;
    font-size:0.8em;
    font-family: Inconsolata, monospace;
}
.highlight {
    margin-bottom: 20px;
}
.typekit-badge {
    display: none !important;
}
.project {
    margin-bottom: 21px;
}
.project .icon img {
    border-radius: 10px;
    box-shadow: 0 2px 2px rgba(0,0,0,0.5);
    /*margin-top:35px;*/
    height: 64px;
    width: 64px;
}
.project .logo {
    text-align: center;
    margin-left:5px;
}
.project .logo img {
    /*max-width: 64px;*/
    max-height: 64px;
}
#projects > h2 {
    text-align: center;
    margin-left:15px;
}
@media only screen and (min-width: 768px) {
    .logo, .icon {
        margin-top: 33px;
    }
}
@media only screen and (max-width: 767px) {
    #site-header {
        text-align: center;
    }
    #site-header nav {
        position: relative;;
        text-align: center;
    }
    #projects > h2 {
        width:100%;
        margin-left: 0;
    }
    .icon, .logo {
        text-align: center;
    }
    .project .logo {
        margin-left:0;
    }
}

